<resources>
    <string name="app_name">IPCamera</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="online">(在线)</string>
    <string name="offline">(离线)</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play_fluency">流 畅</string>
    <string name="play_distinct">清 晰</string>
    <string name="play_high_definition">高 清</string>

    <string name="videoCut">裁剪</string>
    <string name="cutShow">隐藏</string>

    <!--showFragment-->
    <string name="dialog_fragment_share">分享</string>

    <!--tip-->
    <string name="title_activity_login">填写ID</string>

    <!--showFragment-->
    <string name="dialog_fragment_confirm">确定</string>
    <string name="dialog_fragment_cancel">取消</string>

    <!-- 提示信息-->
    <string name="tip_net_connect">网络连接中...</string>
    <string name="tip_connect_fail">连接失败</string>
    <string name="tip_connect_success">成功连接</string>

    <!-- 添加设备-->
    <string name="name">设备名</string>
    <string name="id">设备ID</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="type">类型</string>

    <!--tip-->
    <string name="tip_network_unavailable">网络连接不可用</string>
    <string name="tip_error_number">手机号码应为11位数字</string>
    <string name="tip_number_error">手机号格式不正确</string>
    <string name="tip_error_code_empty">请输入验证码</string>
    <string name="tip_error_code">验证码错误</string>
    <string name="tip_error_check">验证失败</string>
    <string name="tip_error_password">密码应该为6~16位</string>
    <string name="tip_error_password_empty">密码中不能出现空格</string>
    <string name="tip_error_password_different">两次输入的密码不一致</string>
    <string name="tip_error_password_need">请输入密码</string>
    <string name="tip_error_number_need">请输入注册手机号</string>
    <!--button-->
    <string name="button_login">立即登录</string>
    <string name="button_forget_password">忘记密码</string>
    <string name="button_next_check_number">下一步,验证手机号</string>
    <string name="button_next_set_password">下一步, 设置密码</string>
    <string name="button_timer">秒</string>
    <string name="button_complete">完成</string>


    <!-- Warn Message-->
    <string name="warn_message_101">请输入注册手机号</string>
    <string name="warn_message_102">请输入验证码</string>
    <string name="warn_message_103">请输入密码</string>
    <string name="warn_message_104">请填写正确的手机号码</string>
    <string name="warn_message_105">连接失败请检查您的网络</string>
    <string name="warn_message_106">密码6-16个字符，不能包含空格</string>
    <string name="warn_message_107">请输入手机号</string>
    <string name="warn_message_108">获取验证码失败</string>
    <string name="warn_message_109">验证码有误，请重新获取</string>
    <string name="warn_message_110">请输入重复密码</string>
    <string name="warn_message_111">密码与重复密码不一致</string>
    <string name="warn_message_112">请输入设备名称</string>
    <string name="warn_message_113">请输入反馈信息</string>
    <string name="warn_message_114">请输入昵称</string>
    <string name="warn_message_115">请输入旧密码</string>
    <string name="warn_message_116">修改密码失败</string>

    <!-- Info Message-->
    <string name="info_message_101">修改密码成功，请重新登录</string>
    <!-- UI_0_login -->
    <string name="user_name_hint">注册手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="quick_login">快速登录</string>
    <!-- UI_0_1_regist -->
    <string name="register_hint">注册</string>
    <string name="get_verification_code_hint">获取验证码</string>
    <string name="phone_hint">11位手机号</string>
    <string name="sms_verification_code_hint">短信验证码</string>
    <string name="enter_password_hint">密码6&#8211;16个字符, 不能包含空格</string>
    <string name="use_agreement1_hint">注册被视为已阅读并同意</string>
    <string name="use_agreement2_hint">《宜生活用户使用协议》</string>
    <string name="resend_hint">重新发送(#second#)</string>

    <!-- UI_0_2 -->
    <string name="quick_login_hint">快速登录</string>
    <!-- UI_0_3 -->
    <string name="forget_secret1_hint">忘记密码1/2</string>
    <!-- UI_0_3_1 -->
    <string name="forget_secret2_hint">忘记密码2/2</string>
    <string name="enter_password_again_hint">再次输入密码</string>
    <!-- UI_1 -->
    <string name="my_device_hint">我的设备</string>
    <!-- UI_1_1 -->
    <string name="add_member_hint">添加成员</string>
    <string name="scan">扫一扫</string>
    <string name="search">搜索</string>
    <string name="scan_white_box">将取景框对准二维码,\n即可自动扫描。</string>
    <string name="scan_failed_prompt">二维码扫描失败</string>
    <!-- UI_1_1_1 -->
    <string name="photo_album">相册</string>
    <string name="relate">关联</string>
    <string name="finish">完成</string>
    <!-- UI_1_1_2 -->
    <string name="search_member">搜索成员</string>
    <string name="search_hint">搜索</string>
    <string name="add_device">添加</string>
    <string name="more">更多...</string>
    <!-- UI_1_1_1_1 -->
    <string name="device">设备</string>
    <string name="return_ui">返回</string>
    <string name="location">位置</string>
    <string name="connected_device">接入设备</string>
    <string name="device_id">编号:</string>
    <string name="add_device_hint">添加设备</string>
    <string name="wifi_info_hint">请输入当前连接WIFI信息</string>
    <string name="wifi_ssid_hint">WIFI SSID</string>
    <string name="wifi_password_hint">密码</string>
    <!-- UI_1_1_1_1_1 -->
    <string name="success_add_device">成功添加设备</string>
    <!-- UI_1_2 -->
    <string name="query_phone_hint">搜索手机号</string>
    <string name="select_connection_point">选择接入点</string>
    <!-- UI_1_2_1 -->
    <string name="relate_device_connection">关联设备接入</string>
    <!-- UI_1_3 -->
    <string name="device_message">设备消息</string>
    <!-- UI_1_4 -->
    <string name="device_name">设备名称</string>
    <string name="device_param">设备参数</string>
    <string name="device_feedback">反馈</string>
    <string name="device_version">版本</string>
    <string name="device_save">保存</string>
    <string name="device_send">发送</string>
    <string name="device_feedback_hint">输入反馈内容</string>
    <string name="device_cancel">取消</string>

    <!-- UI_2 -->
    <string name="found_device">发现</string>
    <string name="intelligent_scene">智能场景</string>
    <string name="device_circles">设备圈</string>
    <string name="friend">好友</string>
    <string name="personal_profile">个人资料</string>
    <string name="my_share">我的分享</string>
    <string name="user_id">ID</string>
    <string name="head_sculpture">头像</string>
    <string name="nickname">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="change_password">修改密码</string>
    <string name="exit_account">退出账号</string>

    <!-- UI_2_1_1 -->
    <string name="save_device_circles">保存</string>
    <string name="device_circles_name">设备圈名</string>
    <string name="device_circles_default_name">未命名</string>
    <string name="device_list">设备列表</string>
    <string name="member_list">成员列表</string>
    <string name="delete_circle">删除设备圈</string>
    <string name="exit_circle">退出设备圈</string>

    <!-- UI_2_1_2_1 -->
    <string name="command">指令</string>
    <string name="hotkey">快捷指令</string>
    <string name="device_circle_default_command">设备圈默认指令</string>
    <string name="default_command_comment">指定本设备接入设备圈后默认可使用的功能</string>
    <string name="device_circle_permission">设备圈权限</string>
    <string name="history_command">指令历史</string>

    <!-- UI_2_1_2_1_4 -->
    <string name="permission_option_comment">为用户设置使用权限</string>

    <!-- UI_2_1_2_1_4_1 -->
    <string name="permission_option_title">设备圈授权</string>
    <string name="using_auth_comment">允许使用本设备</string>

    <!-- UI_2_2 -->
    <string name="device_member">成员</string>

    <!-- UI_2_2_1 -->
    <string name="add_friend">添加好友</string>

    <!-- ui_3_1_2 -->
    <string name="old_password_hint">请输入旧密码</string>

    <!-- UI_3_2 -->
    <string name="my_shared_member">我分享的成员</string>

    <!-- UI_3_2_1 -->
    <string name="shared_to">已分享给:</string>
</resources>
