<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ui_0_3_1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">

    <com.jiuan.it.ipc.ui.widget.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:custom_title="@string/forget_secret2_hint"
        app:custom_text_color="@color/black"
        app:custom_left_src="@drawable/icon_left"/>

    <include
        layout="@layout/include_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/toolbar"/>

    <com.jiuan.it.ipc.ui.widget.CustomEditGroup
        android:id="@+id/reset_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/toolbar"
        android:src="@drawable/icon_password"
        android:maxLength="16"
        />

    <include
        layout="@layout/include_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/reset_password_EditText"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <com.jiuan.it.ipc.ui.widget.CustomEditGroup
        android:id="@+id/again_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/enter_password_again_hint"
        android:inputType="textPassword"
        android:layout_below="@id/reset_password_EditText"
        android:src="@drawable/icon_lock"
        android:maxLength="16"/>

    <include
        layout="@layout/include_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/again_password_EditText"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:id="@+id/change_password"
        android:background="@drawable/login_button_selector"
        android:layout_below="@+id/again_password_EditText"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="36dp"
        android:text="提交"
        android:textSize="18sp"
        android:textColor="@color/white"/>

</RelativeLayout>